--- a/style.css
+++ b/style.css
@@ -1,73 +1,62 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@600;800&display=swap');
 
-
-*, ::before, ::after {
-    box-sizing: border-box;
+*,
+::before,
+::after {
+  box-sizing: border-box;
 }
 
 
 
-
-
-
-
-
-/* font-family: 'Manrope', sans-serif; */
-
 html {
-    font-size: 62.5%;
-    font-family: 'Manrope', sans-serif;
-    font-weight: 600;  
+  font-size: 62.5%;
+  font-family: 'Manrope', sans-serif;
+  font-weight: 600;
 }
 
 :root {
- --SoftCyan: hsl(174, 77%, 80%);/*(Full Slider Bar)*/
- --StrongCyan: hsl(174, 86%, 45%);/*(slider Background)*/
- --LightGrayishRed: hsl(14, 92%, 95%);/*(Discount Background)*/
- --LightRed: hsl(15, 100%, 70%);/*(Discount Text)*/
- --PaleBlue: hsl(226, 100%, 87%);/*(CTA Text)*/
+  --SoftCyan: hsl(174, 77%, 80%); /*(Full Slider Bar)*/
+  --StrongCyan: hsl(174, 86%, 45%); /*(slider Background)*/
+  --LightGrayishRed: hsl(14, 92%, 95%); /*(Discount Background)*/
+  --LightRed: hsl(15, 100%, 70%); /*(Discount Text)*/
+  --PaleBlue: hsl(226, 100%, 87%); /*(CTA Text)*/
 
- --White: hsl(0, 0%, 100%); /*(Pricing Component Background)*/
- --VeryPaleBlue :hsl(230, 100%, 99%);/*(Main Background) */
- --LightGrayishBlue:hsl(224, 65%, 95%); /*(Empty Slider Bar) */
- --LightGrayishBlue: hsl(223, 50%, 87%);/* (Toggle Background) */
- --GrayishBlue: hsl(225, 20%, 60%); /*(Text)*/
- --DarkDesaturatedBlue: hsl(227, 35%, 25%); /*(Text & CTA Background)*/
+  --White: hsl(0, 0%, 100%); /*(Pricing Component Background)*/
+  --VeryPaleBlue: hsl(230, 100%, 99%); /*(Main Background) */
+  --LightGrayishBlue: hsl(224, 65%, 95%); /*(Empty Slider Bar) */
+  --LightGrayishBlue: hsl(223, 50%, 87%); /* (Toggle Background) */
+  --GrayishBlue: hsl(225, 20%, 60%); /*(Text)*/
+  --DarkDesaturatedBlue: hsl(227, 35%, 25%); /*(Text & CTA Background)*/
 
- --headerText: 2rem;
- --paraText: 1.5rem;
- --smText: 1.25rem;
- --chargeText: 3rem;
+  --headerText: 2rem;
+  --paraText: 1.5rem;
+  --smText: 1.25rem;
+  --chargeText: 3rem;
 
- /* Javascript Variables */
- --sliderBar: 0%;
+  /* Javascript Variables */
+  --sliderBar: 0%;
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    
+  margin: 0;
+  padding: 0;
 }
 
 .bg-container {
-    display: block;
-    max-width: 1500px;
-    margin: auto;
-    background-image:url(images/bg-pattern.svg);
-    
+  display: block;
+  max-width: 1500px;
+  margin: auto;
+  background-image: url(images/bg-pattern.svg);
 }
 
 /* Circle and Header logo mobile */
 
 .logo {
-    display: block;
-    width: 70%;
-    max-width: 450px;
-    margin: auto;
-    padding-top: 5em;
-    
-    
+  display: block;
+  width: 70%;
+  max-width: 450px;
+  margin: auto;
+  padding-top: 5em;
 }
 
 .circles {
@@ -76,325 +65,299 @@ body {
   max-width: 150px;
   position: absolute;
   top: 5%;
-  left: 50%; 
+  left: 50%;
   transform: translateX(-50%);
-  
- 
 }
 
 .header {
-    text-align: center;
-    position: relative;
-    z-index: 2;         
+  text-align: center;
+  position: relative;
+  z-index: 2;
 }
 
-
-
-.text1 ,.text2 {
-    
-    text-align: center;
-    font-size: var(--paraText);
-    color: var(--GrayishBlue); 
-    line-height: 10px;
-    position: relative;
-    z-index: 2;
+.text1,
+.text2 {
+  text-align: center;
+  font-size: var(--paraText);
+  color: var(--GrayishBlue);
+  line-height: 10px;
+  position: relative;
+  z-index: 2;
 }
 
 /* upper card container */
 
 .card-container1 {
-    display: block;
-    width: 85%;
-    max-width: 700px;
-    margin: auto;
-    margin-top: 8em;
-    padding: 1em;
-    border-radius: 10px;
-    background-color: var(--White);
-    position: relative;
+  display: block;
+  width: 85%;
+  max-width: 700px;
+  margin: auto;
+  margin-top: 8em;
+  padding: 1em;
+  border-radius: 10px;
+  background-color: var(--White);
+  position: relative;
 }
 
 .display-flex {
-    display: flex;
-    flex-direction: column;   
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .range {
-   display: block;
-    /* width: 80%; */
-    position: relative;
-    top: 38px;
-    left: 42%;
-    transform: translatex(-50%);  }
+  display: block;  
+  position: relative;
+  top: 38px;
+  left: 42%;
+  transform: translatex(-50%);
+}
 
-    .pageview {
-       display: block;
-       margin-top: 3rem; 
-       font-size: var(--paraText); 
-       color: var(--GrayishBlue);  
-    }
+.pageview {
+  display: block;
+  margin-top: 3rem;
+  font-size: var(--paraText);
+  color: var(--GrayishBlue);
+}
 
-     
-     
+.upper {
+  text-transform: uppercase;
+  letter-spacing: 1.5px;
+}
 
-    .upper {
-        text-transform:uppercase;
-        letter-spacing: 1.5px;
-    }
-    
-    .slider {
+.slider {
+  width: 85%;
+  height: 10px;
+  -webkit-appearance: none;
 
-        width: 85%;
-        height: 10px;
-        -webkit-appearance: none; 
-        
-        background:linear-gradient(to right, var(--StrongCyan) var(--sliderBar), var(--SoftCyan) 1%);         
-        border-radius: 20px;
-        outline: none;           
-        box-shadow: inset 0 0 5px rgba(0,0,0,1);
-        opacity: 0.7; 
-        -webkit-transition: .2s;
-        transition: opacity .2s;
-        cursor: pointer;
-        
-      }   
-      
-      
-      .slider::-moz-range-thumb {
-       
-        width: 35px;
-        height: 35px;   
-        -webkit-appearance: none;       
-        border-radius: 100%;
-        
-        border: 2px solid black;
-        background-color: var(--StrongCyan) ;
-        background-image: url(images/icon-slider.svg); 
-        background-repeat: no-repeat;
-        background-position: center;        
-        cursor: pointer;   
-        
-      }
+  background: linear-gradient(
+    to right,
+    var(--StrongCyan) var(--sliderBar),
+    var(--SoftCyan) 1%
+  );
+  border-radius: 20px;
+  outline: none;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 1);
+  opacity: 0.7;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
+  cursor: pointer;
+}
 
-      .slider-content {          
-          width: 85%;
-          position: absolute;
-          top: 21%;
-          left:55%;
-          transform:translate(-50%);
-      }
-      
-      /* Monthly Charge */         
+.slider::-webkit-slider-thumb {
+  width: 35px;
+  height: 35px;
+  -webkit-appearance: none;
+  border-radius: 100%;
+  border: 2px solid black;
+  background-color: var(--StrongCyan);
+  background-image: url(images/icon-slider.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor: pointer;
+  }
 
-      .monthCharge-flex {
-          display: flex;
-          flex-direction: row;
-          align-items: center;
-          gap: 10px;
-          margin-top: 8em;
-      }
+.slider::-moz-range-thumb {
+  width: 35px;
+  height: 35px;
+  -webkit-appearance: none;
+  border-radius: 100%;
+  border: 2px solid black;
+  background-color: var(--StrongCyan);
+  background-image: url(images/icon-slider.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor: pointer;
+}
 
-      .monthLg {        
-        font-size: var(--chargeText);
-        font-weight: 800;
-        color: black;        
-      }
+.slider-content {
+  width: 85%;
+  position: absolute;
+  top: 21%;
+  left: 55%;
+  transform: translate(-50%);
+}
 
-      .monthSm {
-       display: block;      
-       font-size: var(--paraText); 
-       color: var(--GrayishBlue);
-      }
+/* Monthly Charge */
 
-      /* Billing */
-      
-      .flex-row {
+.monthCharge-flex {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+  margin-top: 8em;
+}
+
+.monthLg {
+  font-size: var(--chargeText);
+  font-weight: 800;
+  color: black;
+}
+
+.monthSm {
+  display: block;
+  font-size: var(--paraText);
+  color: var(--GrayishBlue);
+}
+
+/* Billing */
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  align-items: center;
+  gap: 15px;
+}
+
+.text-toggle {
+  display: block;
+  font-size: var(--smText);
+  color: var(--GrayishBlue);
+}
+
+.discount {
+  display: inline;
+  padding: 0.25em 0.6em;
+  margin-left: 0.5em;
+  background-color: var(--LightGrayishRed);
+  border-radius: 100px;
+  border: none;
+  color: var(--LightRed);
+}
+
+.addDisc {
+  display: none;
+}
+
+/* toggle in label designing */
+.toggle {
+  position: relative;
+  display: inline-block;
+  width: 45px;
+  height: 22px;
+  background-color: var(--GrayishBlue);
+  border-radius: 30px;
+  border: 2px solid var(--GrayishBlue);
+  cursor: pointer;
+}
+
+/* After slide changes */
+.toggle:after {
+  content: '';
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background-color: var(--White);
+  top: 1px;
+  left: 1px;
+  transition: all 0.5s;
+  cursor: pointer;
+}
+
+/* Checkbox checked effect */
+.checkbox:checked + .toggle::after {
+  left: 23px;
+}
+
+/* Checkbox checked toggle label bg color */
+.checkbox:checked + .toggle {
+  background-color: var(--GrayishBlue);
+}
+
+/* Checkbox vanished */
+.checkbox {
+  display: none;
+}
+
+/* Bottom Card */
+
+.card-container2 {
+  display: block;
+  width: 85%;
+  max-width: 700px;
+  margin: auto;
+  margin-top: 1em;
+  border-radius: 10px;
+  background-color: var(--White);
+}
+
+.display-flex2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.check-list {
+  margin-top: 4em;
+  padding-right: 5em;
+  list-style: none;
+  text-align: center;
+  line-height: 32px;
+}
+
+.list-team {
+  display: block;
+  padding-left: 1em;
+  font-size: var(--paraText);
+  color: var(--GrayishBlue);
+}
+
+.checkmark {
+  padding-right: 1em;
+}
+
+.start {
+  display: block;
+  margin: 1.5em auto;
+  padding: 0.75em 2.75em;
+  border-radius: 100px;
+  background-color: var(--DarkDesaturatedBlue);
+  color: var(--White);
+  cursor: pointer;
+}
+
+@media only screen and (min-width: 600px) {
+  .text1 {
+    display: inline;
+    margin-left: 10%;
+  }
+
+  .text2 {
+    display: inline;
+  }
+
+  .display-flex {
     display: flex;
+    width: 100%;
     flex-direction: row;
-    justify-content: end;
+    justify-content: space-around;
     align-items: center;
-    gap: 15px;
-   
   }
 
-  .text-toggle {
-    display: block;      
-    font-size: var(--smText); 
-    color: var(--GrayishBlue);
+  .monthCharge-flex {
+    margin-top: 1em;
   }
 
-  .discount {
-      display: inline;
-      padding:.25em .6em;
-      margin-left: .5em;
-      background-color: var(--LightGrayishRed);
-      border-radius: 100px;
-      border: none;
-      color: var(--LightRed);
+  .slider-content {
+    top: 35%;
+  }
+
+  .flex-row {
+    margin-top: 8em;
+  }
+
+  .display-flex2 {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .flex-row {
+    justify-content: center;
   }
 
   .addDisc {
-      display: none;
+    display: inline;
   }
-
-
-      /* toggle in label designing */
-    .toggle {
-        position : relative ;
-        display : inline-block;
-        width : 45px;
-        height : 22px;
-        background-color: var(--GrayishBlue);
-        border-radius: 30px;
-        border: 2px solid var(--GrayishBlue);
-        cursor: pointer;
-    }
-            
-    /* After slide changes */
-    .toggle:after {
-        content: '';
-        position: absolute;
-        width: 16px;
-        height: 16px;
-        border-radius: 50%;
-        background-color: var(--White);
-        top: 1px; 
-        left: 1px;
-        transition:  all 0.5s;
-        cursor: pointer;
-    }
-            
-    
-    
-            
-    /* Checkbox checked effect */
-    .checkbox:checked + .toggle::after {
-        left : 23px; 
-    }
-            
-    /* Checkbox checked toggle label bg color */
-    .checkbox:checked + .toggle {
-        background-color: var(--GrayishBlue);
-    }
-            
-    /* Checkbox vanished */
-    .checkbox { 
-        display : none;
-        
-    }
-
-
-    /* Bottom Card */
-
-
-    .card-container2 {
-        display: block;
-        width: 85%;
-        max-width: 700px;
-        margin: auto;
-        margin-top: 1em;
-        border-radius: 10px;
-        background-color: var(--White);
-    }
-
-    .display-flex2 {
-        display: flex;
-        flex-direction: column;   
-        align-items: center;
-       
-    }
-
-    .check-list {
-        margin-top: 4em;
-        padding-right: 5em;
-        list-style: none;
-        text-align: center;
-        line-height: 32px;
-       
-    }
-
-    .list-team {
-        display: block; 
-        padding-left: 1em;     
-        font-size: var(--paraText); 
-        color: var(--GrayishBlue);
-    }
-
-    .checkmark {
-        padding-right: 1em;
-    }
-
-    .start {
-        display: block;
-        margin: 1.5em auto;
-        padding: .75em 2.75em;
-        border-radius: 100px;
-        background-color: var(--DarkDesaturatedBlue);
-        color: var(--White);
-        cursor: pointer;
-    }
-
-    @media only screen and (min-width: 600px){
-
-        .text1 {
-            display: inline;
-            margin-left:10%
-        }
-
-        .text2 {
-            display: inline;
-        }
-
-        .display-flex {
-            display: flex;
-            width: 100%;
-            flex-direction: row; 
-            justify-content:space-around;  
-            align-items: center;
-            
-            
-        }
-
-        .monthCharge-flex {
-           
-            margin-top: 1em;
-            
-        }
-
-         
-
-        .slider-content {   
-            top: 35%;            
-        }
-
-        .flex-row {
-            margin-top: 8em;
-        }
-
-        .display-flex2 {
-            flex-direction: row;
-            justify-content: space-between;
-            
-        }
-
-        
-
-
-
-
-
-
-        .flex-row {            
-            justify-content: center;           
-          }
-
-       .addDisc {
-           display: inline;
-       }   
-
-    }
-        
-    
-    
-     
+}
