--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ body {
 .flex-row {
   display: flex;
   flex-direction: row;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
   gap: 15px;
 }
@@ -353,11 +353,16 @@ body {
     justify-content: space-between;
   }
 
-  .flex-row {
+   .flex-row {
     justify-content: center;
-  }
+    margin-left: 6em;
+  } 
 
   .addDisc {
     display: inline;
+  }
+
+  .check-list {    
+    text-align: left;    
   }
 }
